--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": ">=4.0.0"
   },
   "scripts": {
-    "prestart": "babel ./client/src/ --out-dir client/public/compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline",
+    "prestart": "babel ./client/src --out-dir client/public/compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline",
     "start": "node ./server/server.js"
   },
   "dependencies": {
@@ -21,5 +21,8 @@
     "mongoose": "^4.11.9",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0"
   }
 }
